basic CRUD is workign

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Appointments#new</h1>
-<p>Find me in app/views/appointments/new.html.erb</p>
+<h1><%= @appointment.id ? "Update Appointment" : "New Appointment" %></h1>
+
+<%= form_with(model: @appointment , local: true, class: "ui form" ) do |f| %>
+  <%= f.label :patient %>
+  <%= f.select :patient_id, @patients.collect { |p| [p.full_name, p.id] } %>
+  <br />
+  <%= f.label :doctor %>
+  <%= f.select :doctor_id, @doctors.collect { |d| [d.title, d.id] } %>
+  <br />
+  <%= f.label :time %>
+  <%= f.text_field :time%>
+  <br />
+  <%= f.label :date %>
+  <%= f.text_field :date%>
+  <br />
+  <%= f.submit nil, class: "ui green button inverted" %>
+<% end %>
