--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Appointments#index</h1>
-<p>Find me in app/views/appointments/index.html.erb</p>
+<style> .font {font-family: 'ZCOOL QingKe HuangYou';} </style>
+
+<h1 class = "font">Appointments</h1>
+
+<% if @appointments.length > 0 %>
+  <% @appointments.each do |appointment| %>
+    <%= link_to "Appointment at #{appointment.time} on #{appointment.date}", appointment_path(appointment) %>
+  <% end %> 
+<% else %>
+  <h5 class = "font "> No Appointments Listed </h5>
+<% end %>
