--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Patients#show</h1>
-<p>Find me in app/views/patients/show.html.erb</p>
+
+<h1><%= @patient.full_name %></h1>
+<h5><%= @patient.age %></h5>
+<h5><%= @patient.gender %></h5>
